# labapython2-1

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: main.py  sample_tasks.json  task_model.py  task_queue.py  task_sources.py
tests/: test_task_model.py  test_task_queue.py  test_tasksSources.py
