[project]
name = "tasks-sources-python"
version = "0.1.0"
description = "mini protocol for tasks sources"
requires-python = ">=3.12"
dependencies = [
    "pytest>=6.2.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
